# verus_mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json  settings.local.json  spec-generation-prompt.md
.claude/agents/: assume-spec-gen.md  idiom-converter.md  repair-agent.md
.claude/archive/: verification-fixer.md
.claude/archive/search-examples/: SKILL.md
.claude/skills/ask-user-help/: SKILL.md
.claude/skills/check-cheating/: SKILL.md
.claude/skills/learn-pattern/: SKILL.md
.claude/skills/log-event/: SKILL.md
.claude/skills/run-contract-tests/: SKILL.md
.claude/skills/run-verification/: SKILL.md
.claude/skills/search-knowledge/: SKILL.md
.claude/skills/track-spec-status/: SKILL.md
.claude/verus-history/: session-log.json
fixedbitset/: Cargo.toml  spec-status.json
fixedbitset/analyses/: veracity-review-module-fn-impls.json  veracity-review-module-fn-impls.md
fixedbitset/src/: range.rs
fixedbitset/src/block/: default.rs  (+1 more)
iban_validate/: Cargo.toml
iban_validate/iban_validate/: Cargo.toml
knowledge/: index.md
knowledge/assume-spec-gen/: assume-spec-ref-self-methods.md  external-type-with-private-fields.md
knowledge/idiom-converter/: exec-allows-no-decreases-clause.md  flat-map-enumerate-to-chars-loop.md
logs/: changes.json
scripts/: verus-kb.py  verus-log.py  verus-progress.py  verus-spec-status.py
src/: lib.rs  main.rs  verus.rs
tests/: cargo_tools_test.rs
tiny-http/: Cargo.toml
tiny-http/src/: client.rs  common.rs  connection.rs  lib.rs  log.rs  request.rs  response.rs  ssl.rs  test.rs
(+28 files in other folders)
